fix(apollo, look&feel): dialog should not allow scroll of page behind it

--- a/client/look-and-feel/css/src/common/reboot.scss
+++ b/client/look-and-feel/css/src/common/reboot.scss
@@ -9,6 +9,10 @@ html {
   line-height: 1.15;
   text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
+
+  &:has(dialog[open]) {
+    overflow: hidden;
+  }
 }
 
 article,
